# personal-dashboard

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  pyproject.toml
backend/: Cargo.toml  dev.Dockerfile
backend/migrations/: 20230815015621_init.up.sql  20230820122543_init.down.sql  20230820122543_init.up.sql  20230822114851_trades_history.down.sql  20230822114851_trades_history.up.sql  20230822120148_quotes.down.sql  20230822120148_quotes.up.sql
backend/src/: handlers.rs  main.rs  models.rs  scheduler.rs  schema.rs
backend/src/handlers/: admin.rs  modelling.rs  portfolio.rs  quotes.rs  stocks.rs  trades.rs
backend/src/models/: quotes.rs  stocks.rs  trades.rs
backend/src/schema/: quotes.rs  stocks.rs  trades.rs
common/: Cargo.toml
frontend/: Cargo.toml  dev.Dockerfile
frontend/src/: main.rs
scripts/: aligned.ipynb  aligned.py  process_cmc.py  set_docker_database_url.sh  simple.py  start_backend.sh
scripts/.ipynb_checkpoints/: aligned-checkpoint.ipynb
