[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid", "bigdecimal", "macros"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
common = { version = "0.1.0", path = "../common" }
yahoo_finance_api = "2.0.1"
strum = "0.25.0"
strum_macros = "0.25.2"
bigdecimal = "0.4.1"
time = "0.3.27"
tokio = { version = "1.32.0", features = ["full"]}
actix-rt = "2.9.0"
bincode = "1.3.3"
ndarray = "0.15.6"
rand = "0.8.5"
axum = "0.7.2"
